--- a/charts/argo-cd/templates/dex/deployment.yaml
+++ b/charts/argo-cd/templates/dex/deployment.yaml
@@ -82,6 +82,10 @@ spec:
                 name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-cmd-params-{{.Values.stage}}
                 key: dexserver.disable.tls
                 optional: true
+          - name: ARGOCD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         {{- with .Values.dex.envFrom }}
         envFrom:
           {{- toYaml . | nindent 10 }}
