--- a/charts/argo-cd/templates/aggregate-roles.yaml
+++ b/charts/argo-cd/templates/aggregate-roles.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "argo-cd.fullname" . }}-aggregate-to-view
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.fullname" . }}-aggregate-to-view-{{.Values.stage}}
   labels:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
     {{- include "argo-cd.labels" (dict "context" .) | nindent 4 }}
@@ -24,7 +24,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "argo-cd.fullname" . }}-aggregate-to-edit
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.fullname" . }}-aggregate-to-edit-{{.Values.stage}}
   labels:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     {{- include "argo-cd.labels" (dict "context" .) | nindent 4 }}
@@ -51,7 +51,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "argo-cd.fullname" . }}-aggregate-to-admin
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.fullname" . }}-aggregate-to-admin-{{.Values.stage}}
   labels:
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
     {{- include "argo-cd.labels" (dict "context" .) | nindent 4 }}
