--- a/charts/argo-cd/templates/argocd-application-controller/prometheusrule.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/prometheusrule.yaml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: {{ template "argo-cd.controller.fullname" . }}
+  name: {{.Values.k8sPrefix}}-prometheusrule-{{.Values.customer}}-{{.Values.purpose}}-{{ template "argo-cd.controller.fullname" . }}-{{.Values.stage}}
   namespace: {{ default .Release.Namespace .Values.controller.metrics.rules.namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.controller.name "name" .Values.controller.name) | nindent 4 }}
