modify argocd-notifications' yaml files

--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "argo-cd.name" $ }}-cluster-{{ .name }}
+  name: {{$.Values.k8sPrefix}}-secret-{{$.Values.customer}}-{{$.Values.purpose}}-{{ include "argo-cd.name" $ }}-cluster-{{ .name }}-{{$.Values.stage}}
   namespace: {{ $.Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" $) | nindent 4 }}
