--- a/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-repo-creds-{{ $repo_cred_key }}
+  name: {{$.Values.k8sPrefix}}-secret-{{$.Values.customer}}-{{$.Values.purpose}}-argocd-repo-creds-{{ $repo_cred_key }}-{{$.Values.stage}}
   namespace: {{ $.Release.Namespace | quote }}
   labels:
     argocd.argoproj.io/secret-type: repo-creds
