--- a/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "argo-cd.server.fullname" . }}-grpc
+  name: {{.Values.k8sPrefix}}-ingress-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.server.fullname" . }}-grpc-{{.Values.stage}}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
@@ -31,7 +31,7 @@ spec:
             pathType: {{ .Values.server.ingressGrpc.pathType }}
             backend:
               service:
-                name: {{ include "argo-cd.server.fullname" . }}
+                name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.server.fullname" . }}-{{.Values.stage}}
                 port:
                   number: {{ .Values.server.service.servicePortHttps }}
     {{- range .Values.server.ingressGrpc.extraHosts }}
@@ -42,7 +42,7 @@ spec:
             pathType: {{ default $.Values.server.ingressGrpc.pathType .pathType }}
             backend:
               service:
-                name: {{ include "argo-cd.server.fullname" $ }}
+                name: {{$.Values.k8sPrefix}}-svc-{{$.Values.customer}}-{{$.Values.purpose}}-{{ include "argo-cd.server.fullname" $ }}-{{$.Values.stage}}
                 port:
                   number: {{ $.Values.server.service.servicePortHttps }}
     {{- end }}
