--- a/charts/argo-cd/templates/argocd-server/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress.yaml
@@ -4,7 +4,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "argo-cd.server.fullname" . }}
+  name: {{.Values.k8sPrefix}}-ingress-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.server.fullname" . }}-{{.Values.stage}}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
@@ -32,7 +32,7 @@ spec:
             pathType: {{ $.Values.server.ingress.pathType }}
             backend:
               service:
-                name: {{ include "argo-cd.server.fullname" . }}
+                name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "argo-cd.server.fullname" . }}-{{.Values.stage}}
                 port:
                   number: {{ $servicePort }}
     {{- range .Values.server.ingress.extraHosts }}
@@ -43,7 +43,7 @@ spec:
             pathType: {{ default $.Values.server.ingress.pathType .pathType }}
             backend:
               service:
-                name: {{ include "argo-cd.server.fullname" $ }}
+                name: {{$.Values.k8sPrefix}}-svc-{{$.Values.customer}}-{{$.Values.purpose}}-{{ include "argo-cd.server.fullname" $ }}-{{$.Values.stage}}
                 port:
                   number: {{ $servicePort }}
     {{- end }}
