--- a/charts/argo-cd/templates/redis/networkpolicy.yaml
+++ b/charts/argo-cd/templates/redis/networkpolicy.yaml
@@ -5,7 +5,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
-  name: {{ template "argo-cd.redis.fullname" . }}
+  name: {{.Values.k8sPrefix}}-networkpolicy-{{.Values.customer}}-{{.Values.purpose}}-{{ template "argo-cd.redis.fullname" . }}-{{.Values.stage}}
   namespace: {{ .Release.Namespace | quote }}
 spec:
   ingress:
