--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -7,7 +7,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
 apiVersion: v2
 appVersion: v2.10.2
-description: Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes
+description: Argo CD GitOps continuous delivery tool for Kubernetes
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 keywords:
