--- a/charts/external-secrets/templates/cert-controller-poddisruptionbudget.yaml
+++ b/charts/external-secrets/templates/cert-controller-poddisruptionbudget.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{.Values.k8sPrefix}}-pdb-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-cert-cntlr-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-pdb-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-ccntlr-{{.Values.stage}}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "external-secrets-cert-controller.labels" . | nindent 4 }}
